--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Variables
-@import 'variables';
+// Partials
+@import 'partials/variables';
+@import 'partials/generals';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
