--- a/resources/sass/partials/_generals.scss
+++ b/resources/sass/partials/_generals.scss
@@ -20,3 +20,17 @@
 .navbar.bg-black * {
     background-color: #000 !important;
 }
+
+.fw_bold {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.fw_bold:hover {
+    color: $cyan !important;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor !important;
+}
