--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,6 +35,10 @@ a {
   color: currentColor !important;
 }
 
+.badge.fs-1 {
+  font-size: 1rem;
+}
+
 /*!
  * Bootstrap v4.6.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
