--- a/resources/sass/partials/_generals.scss
+++ b/resources/sass/partials/_generals.scss
@@ -38,3 +38,21 @@ a {
 .badge.fs-1 {
     font-size: 1rem;
 }
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+
+    h5 {
+        font-size: 1.5rem;
+        font-style: italic;
+    }
+
+    a.card-link {
+        color: #3490dc !important;
+
+        &.card-link:hover {
+            text-decoration: underline;
+        }
+    }
+}
